# TFG-back

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  install.sh  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: workflow.yml
backend/: .coveragerc  .env.default  Dockerfile  pyproject.toml  pytest.ini  uwsgi.ini
backend/backend/: api_urls.py  asgi.py  celery.py  schema.py  urls.py  wsgi.py
backend/backend/settings/: base.py  deploy.py  local.py  testing.py
backend/base/: constants.py  exceptions.py  factory_test_case.py  jwt.py  middlewares.py  models.py  redirect.py  secretsmanager.py  storage.py  utils.py
backend/base/graphql/: inputs.py  utils.py
backend/base/management/commands/: wait_for_db.py
backend/base/templates/: 500.html
backend/media_upload/: models.py  rest_views.py
backend/media_upload/backends/: base.py  local.py  s3.py
backend/media_upload/graphql/: inputs.py  mutations.py  types.py
backend/media_upload/migrations/: 0001_initial.py
backend/media_upload/urls/: files.py
backend/resources/: admin.py  errors.py  models.py  utils.py
backend/resources/graphql/: inputs.py  mutations.py  queries.py  types.py
backend/resources/migrations/: 0001_initial.py  0002_initial.py  0003_alter_resource_available_time.py  0004_resource_location.py
backend/resources/tests/: test_day_availability_mutations.py  test_day_availability_queries.py  test_resources_mutations.py  test_resources_queries.py
backend/resources/tests/requests/: mutations.py  queries.py
backend/slots/: admin.py  models.py
backend/slots/graphql/: inputs.py  mutations.py  queries.py  types.py
backend/slots/migrations/: 0001_initial.py
backend/slots/templates/deletedSlot/: email_template.html  email_template.txt  subject_template.txt
backend/slots/templates/reservation/: email_template.html  email_template.txt  subject_template.txt
backend/slots/tests/: test_slots_mutations.py
backend/slots/tests/requests/: mutations.py
backend/testing/: views.py
backend/users/: admin.py  backends.py  managers.py  models.py  urls.py  utils.py  views.py
backend/users/graphql/: inputs.py  mutations.py  queries.py  types.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_public_name.py  0003_user_logout.py
backend/users/templates/user/: password_reset_email.html  password_reset_email.txt
backend/users/tests/: test_user.py
nginx/: Dockerfile
nginx/etc/: nginx.conf  nginx.conf.tmp
scripts/: check-types  git-hook-commit-msg
